@@ -1,10 +1,14 @@
-// $Id: simpletest.js,v 1.2.4.2 2008/09/16 03:02:31 boombatower Exp $
+// $Id: simpletest.js,v 1.2.4.3 2008/10/09 05:05:15 boombatower Exp $
 
 /**
  * Add the cool table collapsing on the testing overview page.
  */
 Drupal.behaviors.simpleTestMenuCollapse = function() {
   // Adds expand-collapse functionality.
+  $('div.simpletest-image').each(function() {
+    direction = Drupal.settings.simpleTest[$(this).attr('id')].imageDirection;
+    $(this).html(Drupal.settings.simpleTest.images[direction]);
+  });
   $('div.simpletest-image').click(function() {
     // Toggle all of the trs.
     if (!Drupal.settings.simpleTest[$(this).attr('id')].clickActive) {
